--- a/src/index.css
+++ b/src/index.css
@@ -6,24 +6,31 @@ body {
   margin: 0;
   background-color: #0B2434;
   padding: 20px;
+  font-family: 'Karla', sans-serif;
 }
 
 main {
   background-color: #F5F5F5;
-  height: 400px;
+  height: 500px;
   max-width: 800px;
   border-radius: 5px;
   padding: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
   align-items: center;
+}
+
+.title {
+  font-size: 40px;
+  margin: 0;
 }
 
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .die-face {
@@ -39,4 +46,29 @@ main {
 
 .die-num {
   font-size: 2rem;
+}
+
+.roll-dice {
+  height: 50px;
+  width: 150px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035FF;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.roll-dice:focus {
+  outline: none;
+}
+
+.roll-dice:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.statistics {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
